# ggnote-backend

./: .env  .gitignore  README.md  pyproject.toml
app/: db.py  exceptions.py  main.py  models.py
